--- a/image.ui
+++ b/image.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>779</width>
-    <height>849</height>
+    <width>627</width>
+    <height>787</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>470</y>
+      <y>280</y>
       <width>281</width>
       <height>61</height>
      </rect>
@@ -43,8 +43,8 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>741</width>
-      <height>411</height>
+      <width>601</width>
+      <height>241</height>
      </rect>
     </property>
     <property name="text">
@@ -57,8 +57,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>470</y>
+      <x>330</x>
+      <y>280</y>
       <width>281</width>
       <height>61</height>
      </rect>
@@ -81,10 +81,10 @@
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>590</y>
-      <width>731</width>
-      <height>181</height>
+      <x>10</x>
+      <y>370</y>
+      <width>601</width>
+      <height>131</height>
      </rect>
     </property>
     <property name="font">
@@ -104,6 +104,22 @@
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:16pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Result&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>520</y>
+      <width>601</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
